# network-automation-inventory

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
inventory/: commands.example.yaml  devices.example.yaml
src/: __init__.py  exporter.py  main.py  parser.py  ssh_handler.py
tests/: test_exporter.py  test_main_config.py  test_parser.py
